--- a/NextHappen/index.html
+++ b/NextHappen/index.html
@@ -16,7 +16,7 @@
     <div class="hero">
       <h1 class="title">NEXTHAPPEN</h1>
       <div class="logo">
-        <img src="/images/happi_logo.png" alt="Happi logo" height="150px" href="#">
+        <img src="/NextHappen/images/happi_logo.png" alt="Happi logo" height="150px" href="#">
       </div>
       <button class="burger-menu-open" id="open">
         <div></div>
@@ -37,7 +37,7 @@
       </nav>
       <div class="hero-content">
         <div class="hero-img">
-          <img src="/images/happi.png" alt="Happi" height="700px">
+          <img src="/NextHappen/images/happi.png" alt="Happi" height="700px">
         </div>
         <div class="hero-text">
           <h2 class="slogan">Descubre lo que <br>
@@ -66,7 +66,7 @@
           <div class="card">
             <h3>MARCO NAKASONE</h3>
             <div class="card-img">
-              <img src="/images/marco.jpg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/marco.jpg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Desarrollador fullstack en formación</h4>
             <p>
@@ -77,7 +77,7 @@
           <div class="card">
             <h3>MARCO NAKASONE</h3>
             <div class="card-img">
-              <img src="/images/billy.jpg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/billy.jpg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Desarrollador móvil</h4>
             <p>
@@ -88,7 +88,7 @@
           <div class="card">
             <h3>MARCO NAKASONE</h3>
             <div class="card-img">
-              <img src="/images/jose.jpg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/jose.jpg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Desarrollador móvil</h4>
             <p>
@@ -125,7 +125,7 @@
     </section>
     <section class="about">
       <div class="about-img">
-        <img src="/images/happi.png" alt="Happi" height="700px">
+        <img src="/NextHappen/images/happi.png" alt="Happi" height="700px">
       </div>
       <div class="about-cards">
         <h3>NUESTRA ESENCIA</h3>
@@ -133,7 +133,7 @@
           de la ciudad, guiándolos de manera personalizada y cercana a través de Happi, su llama mascota, para que nunca
           más se pierdan una experiencia gastronómica o artística cerca de ellos.</p>
         <div class="essence-img">
-          <img src="/images/essence.svg" alt="Esencia" height="300px">
+          <img src="/NextHappen/images/essence.svg" alt="Esencia" height="300px">
         </div>
       </div>
     </section>
@@ -148,7 +148,7 @@
             descubrimiento a través de tecnología intuitiva y un enfoque humano, para así fortalecer la economía local y
             enriquecer la vida cultural de todos los limeños.</p>
           <div class="mission-img">
-            <img src="/images/mission.svg" alt="Esencia" height="300px">
+            <img src="/NextHappen/images/mission.svg" alt="Esencia" height="300px">
           </div>
         </div>
         <div class="misision-vision-cards">
@@ -159,7 +159,7 @@
             emprendedor encuentre su audiencia ideal, consolidando así a NextHappen y a Happi, nuestra llama,
             como símbolos de conexión, descubrimiento y alegría en la ciudad.</p>
           <div class="vision-img">
-            <img src="/images/vision.svg" alt="Esencia" height="300px">
+            <img src="/NextHappen/images/vision.svg" alt="Esencia" height="300px">
           </div>
         </div>
       </div>
@@ -171,7 +171,7 @@
           <div class="values-card">
             <h3>INNOVACIÓN</h3>
             <div class="values-card-img">
-              <img src="/images/innovation.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/innovation.svg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Formas creativas de conectarnos con eventos</h4>
             <p>
@@ -181,7 +181,7 @@
           <div class="values-card">
             <h3>ACCESIBILIDAD</h3>
             <div class="values-card-img">
-              <img src="/images/accesibility.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/accesibility.svg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Para todos, sin complicaciones</h4>
             <p>
@@ -192,7 +192,7 @@
           <div class="values-card">
             <h3>ENFOQUE EN LA COMUNIDAD</h3>
             <div class="values-card-img">
-              <img src="/images/community.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/community.svg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Las personas primero</h4>
             <p>
@@ -203,7 +203,7 @@
           <div class="values-card">
             <h3>CONFIANZA</h3>
             <div class="values-card-img">
-              <img src="/images/confidence.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/confidence.svg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Información clara y real.</h4>
             <p>
@@ -214,7 +214,7 @@
           <div class="values-card">
             <h3>COMPROMISO</h3>
             <div class="values-card-img">
-              <img src=" " alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/commitment.svg" alt="Foto de Marco Nakasone">
             </div>
             <h4>Hecho para limeños, por limeños.</h4>
             <p>
@@ -233,7 +233,7 @@
         <div class="functions-cards-carousel" id="functionsCarousel">
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/interactive_map.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/interactive_map.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>MAPA INTERACTIVO</h3>
             <p>
@@ -243,7 +243,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/alerts.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/alerts.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>ALERTAS PERSONALIZADAS</h3>
             <p>
@@ -253,7 +253,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/save_favourites.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/save_favourites.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>FAVORITOS Y GUARDADOS</h3>
             <p>
@@ -263,7 +263,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/profile.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/profile.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>PERFIL PARA EMPRENDEDORES</h3>
             <p>
@@ -273,7 +273,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/search.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/search.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>BÚSQUEDA INTELIGENTE</h3>
             <p>
@@ -283,7 +283,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/happi.png" alt="Happi" height="700px">
+              <img src="/NextHappen/images/happi.png" alt="Happi" height="700px">
             </div>
             <h3>RECOMENDACIONES DE HAPPI</h3>
             <p>
@@ -293,7 +293,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/share.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/share.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>COMPARTIR CON AMIGOS</h3>
             <p>
@@ -303,7 +303,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/mail.svg" alt="Foto de Marco Nakasone">
+              <img src="/NextHappen/images/mail.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>NEWSLETTER SEMANAL</h3>
             <p>
@@ -313,7 +313,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/images/like.svg" alt="Foto de Marco Nakasone" >
+              <img src="/NextHappen/images/like.svg" alt="Foto de Marco Nakasone" >
             </div>
             <h3>SISTEMA DE CALIFICACIONES</h3>
             <p>
