--- a/NextHappen/index.html
+++ b/NextHappen/index.html
@@ -283,7 +283,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/happi.png" alt="Happi" height="700px">
+              <img src="/NextHappen/images/happi_logo.png" alt="Happi">
             </div>
             <h3>RECOMENDACIONES DE HAPPI</h3>
             <p>
@@ -321,6 +321,8 @@
             </p>
           </div>
         </div>
+        <button class="functions-btn prev" onclick="moveFunctions(-1)"> &#10094;</button>
+        <button class="functions-btn next" onclick="moveFunctions(1)"> &#10095;</button>
       </div>
     </section>
   </main>
