--- a/NextHappen/index.html
+++ b/NextHappen/index.html
@@ -28,10 +28,10 @@
           <div></div>
         </button>
         <ul class="menu">
+          <li><a href="#">PRINCIPAL</a></li>
           <li><a href="#">NOSOTROS</a></li>
           <li><a href="#">ACERCA</a></li>
           <li><a href="#">CARACTERITICAS</a></li>
-          <li><a href="#">ESPAÑOL</a></li>
           <li><a href="#">INGLES</a></li>
         </ul>
       </nav>
@@ -313,7 +313,7 @@
           </div>
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/like.svg" alt="Foto de Marco Nakasone" >
+              <img src="/NextHappen/images/like.svg" alt="Foto de Marco Nakasone">
             </div>
             <h3>SISTEMA DE CALIFICACIONES</h3>
             <p>
@@ -325,6 +325,52 @@
         <button class="functions-btn next" onclick="moveFunctions(1)"> &#10095;</button>
       </div>
     </section>
+    <footer>
+      <div class="footer-content">
+        <h1>NEXTHAPPEN</h1>
+        <h3>Optimiza tu restaurante con <br>
+          inteligencia y frescura</h3>
+        <div class="footer-links-wrapper">
+          <div class="contact-btn">
+            <a href="#" class="contact-us">CONTÁCTANOS</a>
+          </div>
+          <div class="footer-links">
+
+            <div class="sections-links">
+              <p>SECCIONES</p>
+              <ul class="sections">
+                <li><a href="#">PRINCIPAL</a></li>
+                <li><a href="#">NOSOTROS</a></li>
+                <li><a href="#">ACERCA</a></li>
+                <li><a href="#">CARACTERÍSTICAS</a></li>
+              </ul>
+            </div>
+            <div class="social-media-links">
+              <p>REDES SOCIALES</p>
+              <ul class="social-media">
+                <li><a href="#">FACEBOOK</a></li>
+                <li><a href="#">TWITTER(X)</a></li>
+                <li><a href="#">INSTAGRAM</a></li>
+              </ul>
+            </div>
+            <div class="contact-links">
+              <p>CONTACTÁNOS</p>
+              <ul class="contact">
+                <li><a href="#">(01) 99-NEOVENT</a></li>
+                <li><a href="#">nexthappen@neovent.pe</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-logo">
+        <img src="/NextHappen/images/happi_logo.png" alt="Happi logo" height="400px">
+      </div>
+
+      <p class="rigths">© 2025 NEOVENT. TODOS LOS DERECHOS RESERVADOS.</p>
+      </div>
+    </footer>
   </main>
   <script src="script.js"></script>
 </body>
