--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="hero">
       <div class="logo">
         <a href="#principal">
-          <img src="/NextHappen/images/happi_logo.png" alt="Happi logo" height="150" data-i18n-alt="alt.happiLogo">
+          <img src="/images/happi_logo.png" alt="Happi logo" height="150" data-i18n-alt="alt.happiLogo">
         </a>
       </div>
     </div>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="hero-center">
-          <img class="happi" src="/NextHappen/images/happi.png" alt="Happi" data-i18n-alt="alt.happi">
+          <img class="happi" src="/images/happi.png" alt="Happi" data-i18n-alt="alt.happi">
         </div>
 
         <div class="hero-right">
@@ -83,7 +83,7 @@
           <div class="card">
             <h3>MARCO NAKASONE</h3>
             <div class="card-img">
-              <img src="/NextHappen/images/marco_nakasone.jpg" alt="Foto de Marco Nakasone" data-i18n-alt="alt.team.marco">
+              <img src="/images/marco_nakasone.jpg" alt="Foto de Marco Nakasone" data-i18n-alt="alt.team.marco">
             </div>
             <h4 data-i18n="team.marco.rol">Desarrollador fullstack en formación</h4>
             <p data-i18n="team.marco.desc">
@@ -96,7 +96,7 @@
           <div class="card">
             <h3>BILLY RUIZ</h3>
             <div class="card-img">
-              <img src="/NextHappen/images/billy_ruiz.jpg" alt="Foto de Billy Ruiz" data-i18n-alt="alt.team.billy">
+              <img src="/images/billy_ruiz.jpg" alt="Foto de Billy Ruiz" data-i18n-alt="alt.team.billy">
             </div>
             <h4 data-i18n="team.billy.rol">Desarrollador móvil</h4>
             <p data-i18n="team.billy.desc">
@@ -109,7 +109,7 @@
           <div class="card">
             <h3>JOSE PAREDES</h3>
             <div class="card-img">
-              <img src="/NextHappen/images/jose_paredes.jpg" alt="Foto de Jose Paredes" data-i18n-alt="alt.team.josep">
+              <img src="/images/jose_paredes.jpg" alt="Foto de Jose Paredes" data-i18n-alt="alt.team.josep">
             </div>
             <h4 data-i18n="team.josep.rol">Diseñador y desarrollador front-end</h4>
             <p data-i18n="team.josep.desc">
@@ -122,7 +122,7 @@
           <div class="card">
             <h3>PABLO MARTINEZ</h3>
             <div class="card-img">
-              <img src="/NextHappen/images/pablo_martinez.jpg" alt="Foto de Pablo Martinez" data-i18n-alt="alt.team.pablo">
+              <img src="/images/pablo_martinez.jpg" alt="Foto de Pablo Martinez" data-i18n-alt="alt.team.pablo">
             </div>
             <h4 data-i18n="team.pablo.rol">Líder del equipo</h4>
             <p data-i18n="team.pablo.desc">
@@ -136,7 +136,7 @@
           <div class="card">
             <h3>JOSE CHIRITO</h3>
             <div class="card-img">
-              <img src="/NextHappen/images/jose_chirito.jpg" alt="Foto de Jose Chirito" data-i18n-alt="alt.team.josec">
+              <img src="/images/jose_chirito.jpg" alt="Foto de Jose Chirito" data-i18n-alt="alt.team.josec">
             </div>
             <h4 data-i18n="team.josec.rol">Especialista en bases de datos y seguridad</h4>
             <p data-i18n="team.josec.desc">
@@ -154,7 +154,7 @@
 
     <section class="about" id="about">
       <div class="about-img">
-        <img src="/NextHappen/images/happi.png" alt="Happi" height="700px" data-i18n-alt="alt.happi">
+        <img src="/images/happi.png" alt="Happi" height="700px" data-i18n-alt="alt.happi">
       </div>
       <div class="about-cards">
         <h3 data-i18n="about.esenciaTitulo">NUESTRA ESENCIA</h3>
@@ -164,7 +164,7 @@
           más se pierdan una experiencia gastronómica o artística cerca de ellos.
         </p>
         <div class="essence-img">
-          <img src="/NextHappen/images/essence.svg" alt="Esencia" height="300px" data-i18n-alt="alt.esencia">
+          <img src="/images/essence.svg" alt="Esencia" height="300px" data-i18n-alt="alt.esencia">
         </div>
       </div>
     </section>
@@ -182,7 +182,7 @@
             enriquecer la vida cultural de todos los limeños.
           </p>
           <div class="mission-img">
-            <img src="/NextHappen/images/mission.svg" alt="Esencia" height="300px" data-i18n-alt="alt.mision">
+            <img src="/images/mission.svg" alt="Esencia" height="300px" data-i18n-alt="alt.mision">
           </div>
         </div>
 
@@ -196,7 +196,7 @@
             como símbolos de conexión, descubrimiento y alegría en la ciudad.
           </p>
           <div class="vision-img">
-            <img src="/NextHappen/images/vision.svg" alt="Esencia" height="300px" data-i18n-alt="alt.vision">
+            <img src="/images/vision.svg" alt="Esencia" height="300px" data-i18n-alt="alt.vision">
           </div>
         </div>
 
@@ -211,7 +211,7 @@
           <div class="values-card">
             <h3 data-i18n="values.innovacion.titulo">INNOVACIÓN</h3>
             <div class="values-card-img">
-              <img src="/NextHappen/images/innovation.svg" alt="Innovación" data-i18n-alt="alt.values.innovation">
+              <img src="/images/innovation.svg" alt="Innovación" data-i18n-alt="alt.values.innovation">
             </div>
             <h4 data-i18n="values.innovacion.sub">Formas creativas de conectarnos con eventos</h4>
             <p data-i18n="values.innovacion.texto">
@@ -222,7 +222,7 @@
           <div class="values-card">
             <h3 data-i18n="values.accesibilidad.titulo">ACCESIBILIDAD</h3>
             <div class="values-card-img">
-              <img src="/NextHappen/images/accesibility.svg" alt="Accesibilidad" data-i18n-alt="alt.values.accessibility">
+              <img src="/images/accesibility.svg" alt="Accesibilidad" data-i18n-alt="alt.values.accessibility">
             </div>
             <h4 data-i18n="values.accesibilidad.sub">Para todos, sin complicaciones</h4>
             <p data-i18n="values.accesibilidad.texto">
@@ -234,7 +234,7 @@
           <div class="values-card">
             <h3 data-i18n="values.comunidad.titulo">ENFOQUE EN LA COMUNIDAD</h3>
             <div class="values-card-img">
-              <img src="/NextHappen/images/community.svg" alt="Enfoque en la comunidad" data-i18n-alt="alt.values.community">
+              <img src="/images/community.svg" alt="Enfoque en la comunidad" data-i18n-alt="alt.values.community">
             </div>
               <h4 data-i18n="values.comunidad.sub">Las personas primero</h4>
             <p data-i18n="values.comunidad.texto">
@@ -246,7 +246,7 @@
           <div class="values-card">
             <h3 data-i18n="values.confianza.titulo">CONFIANZA</h3>
             <div class="values-card-img">
-              <img src="/NextHappen/images/confidence.svg" alt="Confianza" data-i18n-alt="alt.values.confidence">
+              <img src="/images/confidence.svg" alt="Confianza" data-i18n-alt="alt.values.confidence">
             </div>
             <h4 data-i18n="values.confianza.sub">Información clara y real.</h4>
             <p data-i18n="values.confianza.texto">
@@ -258,7 +258,7 @@
           <div class="values-card">
             <h3 data-i18n="values.compromiso.titulo">COMPROMISO</h3>
             <div class="values-card-img">
-              <img src="/NextHappen/images/commitment.svg" alt="Compromiso" data-i18n-alt="alt.values.commitment">
+              <img src="/images/commitment.svg" alt="Compromiso" data-i18n-alt="alt.values.commitment">
             </div>
             <h4 data-i18n="values.compromiso.sub">Hecho para limeños, por limeños.</h4>
             <p data-i18n="values.compromiso.texto">
@@ -280,7 +280,7 @@
         <div class="functions-cards-carousel" id="functionsCarousel">
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/interactive_map.svg" alt="Mapa interactivo" data-i18n-alt="alt.func.mapa">
+              <img src="/images/interactive_map.svg" alt="Mapa interactivo" data-i18n-alt="alt.func.mapa">
             </div>
             <h3 data-i18n="funciones.mapa.titulo">MAPA INTERACTIVO</h3>
             <p data-i18n="funciones.mapa.texto">
@@ -291,7 +291,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/alerts.svg" alt="Alertas" data-i18n-alt="alt.func.alertas">
+              <img src="/images/alerts.svg" alt="Alertas" data-i18n-alt="alt.func.alertas">
             </div>
             <h3 data-i18n="funciones.alertas.titulo">ALERTAS PERSONALIZADAS</h3>
             <p data-i18n="funciones.alertas.texto">
@@ -302,7 +302,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/save_favourites.svg" alt="Guardar favoritos" data-i18n-alt="alt.func.favoritos">
+              <img src="/images/save_favourites.svg" alt="Guardar favoritos" data-i18n-alt="alt.func.favoritos">
             </div>
             <h3 data-i18n="funciones.favoritos.titulo">FAVORITOS Y GUARDADOS</h3>
             <p data-i18n="funciones.favoritos.texto">
@@ -313,7 +313,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/profile.svg" alt="Perfil" data-i18n-alt="alt.func.perfil">
+              <img src="/images/profile.svg" alt="Perfil" data-i18n-alt="alt.func.perfil">
             </div>
             <h3 data-i18n="funciones.perfil.titulo">PERFIL PARA EMPRENDEDORES</h3>
             <p data-i18n="funciones.perfil.texto">
@@ -324,7 +324,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/search.svg" alt="Búsqueda" data-i18n-alt="alt.func.busqueda">
+              <img src="/images/search.svg" alt="Búsqueda" data-i18n-alt="alt.func.busqueda">
             </div>
             <h3 data-i18n="funciones.busqueda.titulo">BÚSQUEDA INTELIGENTE</h3>
             <p data-i18n="funciones.busqueda.texto">
@@ -335,7 +335,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/happi_logo.png" alt="Happi" data-i18n-alt="alt.func.happiLogo">
+              <img src="/images/happi_logo.png" alt="Happi" data-i18n-alt="alt.func.happiLogo">
             </div>
             <h3 data-i18n="funciones.happi.titulo">RECOMENDACIONES DE HAPPI</h3>
             <p data-i18n="funciones.happi.texto">
@@ -346,7 +346,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/share.svg" alt="Compartir" data-i18n-alt="alt.func.compartir">
+              <img src="/images/share.svg" alt="Compartir" data-i18n-alt="alt.func.compartir">
             </div>
             <h3 data-i18n="funciones.compartir.titulo">COMPARTIR CON AMIGOS</h3>
             <p data-i18n="funciones.compartir.texto">
@@ -357,7 +357,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/mail.svg" alt="Correo" data-i18n-alt="alt.func.mail">
+              <img src="/images/mail.svg" alt="Correo" data-i18n-alt="alt.func.mail">
             </div>
             <h3 data-i18n="funciones.newsletter.titulo">NEWSLETTER SEMANAL</h3>
             <p data-i18n="funciones.newsletter.texto">
@@ -368,7 +368,7 @@
 
           <div class="functions-card">
             <div class="values-card-img">
-              <img src="/NextHappen/images/like.svg" alt="Me gusta" data-i18n-alt="alt.func.like">
+              <img src="/images/like.svg" alt="Me gusta" data-i18n-alt="alt.func.like">
             </div>
             <h3 data-i18n="funciones.calificaciones.titulo">SISTEMA DE CALIFICACIONES</h3>
             <p data-i18n="funciones.calificaciones.texto">
@@ -422,7 +422,7 @@
       </div>
 
       <div class="footer-logo">
-        <img src="/NextHappen/images/happi_logo.png" alt="Happi logo" height="400px" data-i18n-alt="alt.happiLogo">
+        <img src="/images/happi_logo.png" alt="Happi logo" height="400px" data-i18n-alt="alt.happiLogo">
       </div>
 
       <p class="rigths" data-i18n="footer.rights">© 2025 NEOVENT. TODOS LOS DERECHOS RESERVADOS.</p>
